
	* apps/system/ramtest:  Add a simple memory test (2013-03-26).
	* apps/examples/ostest:  In the non-cancelable thread test, we need
	  to give the thread an opportunity to run and to set the non-
	  cancelable state.
	* apps/nshlib/nsh_ddcmd.c: Correct the test of the skip input
	  parameter.  Was limiting the range to <= count.  From Ken
	  Petit (2014-4-24).

6.28 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/mtdpart:  Provides a simple test of MTD partitions.
	* apps/nshlib/nsh_mntcmds.c:  Add a -h option to the df command to show
	  the volume information in human readable form (Ken Petit, 2013-4-30).
	* apps/nshlib/nsh_fscmds.c: Add support for the mksmartfs command.
	  (Ken Petit, 2013-4-30).
	* apps/system/flash_eraseall:  Add an interface to erase FLASH using a
	  flash_eraseall NSH command  (Ken Pettit, 2013-5-1).
	* apps/examples/flash_test and apps/examples/smart_test:  Add tests of
	  the SMART block driver and file system  (Ken Pettit, 2013-5-1).
	* apps/examples/mtdpart:  Extended to the test.  The original test
	  coverage was superficial (2013-5-3).
	* apps/examples/smart:  This is an adaptation of the NXFFS stress
	  test for the SMART file system (Ken Pettit, 2013-5-3).
	* apps/examplex/nxtext:  Remove the CONFIG_EXAMPLES_NXTEXT_NOGETRUN
	  option.  The test logic was bad for the case where this options
	  is not selected.  Also, complete the empty Kconfig file (2013-5-7).
	* apps/NxWidgets/Kconfig:  Updated to match NxWidgets/Kconfig by
	  Ken Pettit (2013-5-11).
	* apps/examples/helloxx:  C++ name mangling was occurring when this
	  example is built as an NSH built-in application.  (2013-5-16).
	* apps/netutils/discover:  Added a runtime configuration for the
	  UDP discover utility.  From Max Holtzberg (2013-5-21).
	* apps/examples/tcpecho:  Added a simple single threaded, poll based
 	  TCP echo server based on W. Richard Stevens UNIX Network Programming
	  Book.  Contributed by Max Holtberg (2013-5-22).