@@ -47,6 +47,7 @@ source "$APPSDIR/examples/rgmp/Kconfig"
 source "$APPSDIR/examples/romfs/Kconfig"
 source "$APPSDIR/examples/sendmail/Kconfig"
 source "$APPSDIR/examples/serloop/Kconfig"
+source "$APPSDIR/examples/slcd/Kconfig"
 source "$APPSDIR/examples/flash_test/Kconfig"
 source "$APPSDIR/examples/smart_test/Kconfig"
 source "$APPSDIR/examples/smart/Kconfig"
