@@ -214,6 +214,10 @@ ifeq ($(CONFIG_EXAMPLES_SERLOOP),y)
 CONFIGURED_APPS += examples/serloop
 endif
 
+ifeq ($(CONFIG_EXAMPLES_SLCD),y)
+CONFIGURED_APPS += examples/slcd
+endif
+
 ifeq ($(CONFIG_EXAMPLES_FLASH_TEST),y)
 CONFIGURED_APPS += examples/flash_test
 endif
