@@ -560,3 +560,6 @@
 	* apps/examples/tcpecho:  Added a simple single threaded, poll based
  	  TCP echo server based on W. Richard Stevens UNIX Network Programming
 	  Book.  Contributed by Max Holtberg (2013-5-22).
+	* apps/examples/slcd:  Add an example for testing alphanumeric,
+	  segment LCDs (2013-5-24).
+
